--- a/client/src/lib/translations/si.json
+++ b/client/src/lib/translations/si.json
@@ -1,26 +1,38 @@
 {
     "main": {
         "title": "ශ්‍රී ලංකා ආධාර ලේඛනය",
-        "subtitle": "ගංවතුරින් විපතට පත් ජනතාවට සහන",
+        "subtitle": "ගංවතුරෙන් පීඩාවට පත් ප්‍රජාවන්ට සහන",
         "helpCard": {
             "title": "උදව් අවශ්‍යද?",
-            "description": "ඔබට හෝ ඔබ දන්නා අයෙකුට උදව් අවශ්‍ය නම් මෙතැනින් ඉල්ලීම් කරන්න"
+            "description": "ඔබට හෝ ඔබ දන්නා කෙනෙකුට උදව් අවශ්‍ය නම් ඉල්ලීම් කරන්න"
         },
         "donationsCard": {
-            "title": "උදව් කරන්න",
-            "description": "විපතට පත් වූවන්ට ආධාර ලබා දෙන්න"
+            "title": "උදව් ලබා දීම",
+            "description": "විපතට පත් වූවන් සඳහා ආධාර ලබා දෙන්න"
         },
         "locationsCard": {
-            "title": "එකතු කිරීමේ ස්ථාන",
+            "title": "එකතු කිරීමේ මධ්‍යස්ථාන",
             "description": "ආධාර භාර දිය හැකි ළඟම ඇති මධ්‍යස්ථාන සොයා ගන්න"
+        },
+        "educationCard": {
+            "title": "අධ්‍යාපනය",
+            "description": "අධ්‍යාපනික ද්‍රව්‍ය සහ සහාය ඉල්ලීම් කරන්න"
+        },
+        "transportCard": {
+            "title": "ප්‍රවාහන පහසුකම්",
+            "description": "ප්‍රවාහන පහසුකම් සොයා ගන්න හෝ ලබා දෙන්න"
+        },
+        "volunteerCard": {
+            "title": "ස්වේච්ඡා සේවා",
+            "description": "ස්වේච්ඡා සේවකයෙකු ලෙස ලියාපදිංචි වන්න හෝ සොයා ගන්න"
         }
     },
     "helpRequests": {
         "title": "උදව් ඉල්ලීම්",
-        "subtitle": "ඔබට හෝ ඔබ දන්නා අයෙකුට ආධාර අවශ්‍ය නම් මෙතැනින් ඉල්ලීම් කරන්න",
-        "noRequests": "දැනට උදව් ඉල්ලීම් කිසිවක් නොමැත",
+        "subtitle": "ඔබට හෝ ඔබ දන්නා කෙනෙකුට උදව් අවශ්‍ය නම් ඉල්ලීම් කරන්න",
+        "noRequests": "උදව් ඉල්ලීම් නොමැත",
         "firstRequest": "පළමු ඉල්ලීම එක් කරන්න",
-        "loading": "තොරතුරු ලබා ගනිමින්...",
+        "loading": "තොරතුරු පූරණය වෙමින් පවතී...",
         "status": {
             "pending": "උදව් අවශ්‍යයි",
             "fulfilled": "විසඳන ලදී"
@@ -30,81 +42,81 @@
             "helpNeeded": "අවශ්‍ය උදව්",
             "additionalDetails": "අමතර විස්තර",
             "contactInfo": "සම්බන්ධතා",
-            "requestedOn": "ඉල්ලීම කළේ"
+            "requestedOn": "ඉල්ලීම කළ දිනය"
         },
         "form": {
             "title": "උදව් ඉල්ලීමක් එක් කරන්න",
-            "description": "ඔබට අවශ්‍ය උදව් පිළිබඳ තොරතුරු පහත පුරවන්න",
-            "name": "නම",
-            "namePlaceholder": "ඔබේ සම්පූර්ණ නම",
-            "district": "දිස්ත්‍රික්කය",
-            "districtPlaceholder": "තෝරන්න",
-            "address": "ලිපිනය",
-            "addressPlaceholder": "නිවස අංකය, වීථිය, ගම",
-            "phone": "දුරකථන අංකය",
-            "phonePlaceholder": "07x xxxxxxx",
-            "additionalPhone": "අමතර දුරකථන (විකල්ප)",
-            "helpDescription": "අවශ්‍ය උදව්",
-            "helpDescriptionPlaceholder": "උදා: ආහාර, පානීය ජලය, ඖෂධ",
-            "additionalDetails": "අමතර විස්තර (විකල්ප)",
-            "additionalDetailsPlaceholder": "වෙනත් වැදගත් තොරතුරු",
-            "note": "සටහන: ඔබේ සම්බන්ධතා තොරතුරු පරිත්‍යාගශීලීන්ට දර්ශනය වේ."
-        }
-    },
-    "donations": {
-        "title": "පරිත්‍යාග",
-        "subtitle": "ගංවතුරින් විපතට පත් ජනතාවට සහන",
-        "instructions": "ඔබට මෙම ද්‍රව්‍ය අවශ්‍ය නම්, අදාළ පරිත්‍යාගශීලියාගේ දුරකථන අංකයට අමතන්න",
-        "noDonations": "දැනට පරිත්‍යාග කිසිවක් නොමැත",
-        "loading": "තොරතුරු ලබා ගනිමින්...",
-        "status": {
-            "available": "ලබාගත හැක",
-            "collected": "එකතු කරන ලදී"
-        },
-        "card": {
-            "label": "ලබාගත හැකි පරිත්‍යාගය",
-            "badge": "පරිත්‍යාගය",
-            "collected": "එකතු කළා",
-            "address": "ලිපිනය",
-            "description": "විස්තරය",
-            "donor": "පරිත්‍යාගශීලියා",
-            "donatedOn": "පරිත්‍යාගය කළේ",
-            "collectButton": "එකතු කරන්න"
-        },
-        "form": {
-            "title": "පරිත්‍යාගයක් එක් කරන්න",
-            "description": "ඔබට ලබා දිය හැකි ද්‍රව්‍ය පිළිබඳ තොරතුරු",
+            "description": "ඔබට හෝ ඔබ දන්නා කෙනෙකුට අවශ්‍ය උදව් පිළිබඳ තොරතුරු ලබා දෙන්න",
             "name": "නම",
             "namePlaceholder": "ඔබේ නම",
             "district": "දිස්ත්‍රික්කය",
             "districtPlaceholder": "තෝරන්න",
             "address": "ලිපිනය",
-            "addressPlaceholder": "පරිත්‍යාග ලබා ගත හැකි ස්ථානය",
+            "addressPlaceholder": "සම්පූර්ණ ලිපිනය",
             "phone": "දුරකථන අංකය",
             "phonePlaceholder": "07x xxxxxxx",
-            "items": "පරිත්‍යාග කරන ද්‍රව්‍ය",
+            "additionalPhone": "අමතර දුරකථන අංකය (විකල්ප)",
+            "helpDescription": "අවශ්‍ය උදව්",
+            "helpDescriptionPlaceholder": "උදා: ආහාර, පානීය ජලය, ඖෂධ",
+            "additionalDetails": "අමතර විස්තර (විකල්ප)",
+            "additionalDetailsPlaceholder": "අමතර තොරතුරු",
+            "note": "සටහන: ඔබේ සම්බන්ධතා තොරතුරු පරිත්‍යාගශීලීන්ට දර්ශනය වනු ඇත."
+        }
+    },
+    "donations": {
+        "title": "ආධාර",
+        "subtitle": "ගංවතුරෙන් පීඩාවට පත් ප්‍රජාවන්ට සහන",
+        "instructions": "ඔබට මෙම අයිතම අවශ්‍ය නම්, කරුණාකර පරිත්‍යාගශීලියාගේ දුරකථන අංකය අමතන්න",
+        "noDonations": "ආධාර නොමැත",
+        "loading": "තොරතුරු පූරණය වෙමින් පවතී...",
+        "status": {
+            "available": "ලබා ගත හැක",
+            "collected": "එකතු කර ගන්නා ලදී"
+        },
+        "card": {
+            "label": "ලබා ගත හැකි ආධාර",
+            "badge": "ආධාර",
+            "collected": "එකතු කර ගන්නා ලදී",
+            "address": "ලිපිනය",
+            "description": "විස්තරය",
+            "donor": "පරිත්‍යාගශීලියා",
+            "donatedOn": "පරිත්‍යාග කළ දිනය",
+            "collectButton": "එකතු කර ගන්න"
+        },
+        "form": {
+            "title": "ආධාරයක් එක් කරන්න",
+            "description": "ඔබට පරිත්‍යාග කළ හැකි අයිතම පිළිබඳ තොරතුරු ලබා දෙන්න",
+            "name": "නම",
+            "namePlaceholder": "ඔබේ නම",
+            "district": "දිස්ත්‍රික්කය",
+            "districtPlaceholder": "තෝරන්න",
+            "address": "ලිපිනය",
+            "addressPlaceholder": "ආධාර එකතු කර ගත හැකි ස්ථානය",
+            "phone": "දුරකථන අංකය",
+            "phonePlaceholder": "07x xxxxxxx",
+            "items": "පරිත්‍යාග කරන අයිතම",
             "itemsPlaceholder": "උදා: සහල්, කිරි පිටි, ජලය",
             "description": "විස්තරය (විකල්ප)",
-            "descriptionPlaceholder": "ද්‍රව්‍ය පිළිබඳ අමතර විස්තර"
+            "descriptionPlaceholder": "අයිතම පිළිබඳ අමතර තොරතුරු"
         }
     },
     "locations": {
-        "title": "ආධාර එකතු කරන ස්ථාන",
-        "subtitle": "ආධාර භාර දිය හැකි එකතු කිරීමේ ස්ථාන",
-        "noLocations": "ප්‍රදේශ කිසිවක් හමු නොවීය",
-        "loading": "තොරතුරු ලබා ගනිමින්...",
+        "title": "ආධාර එකතු කිරීමේ මධ්‍යස්ථාන",
+        "subtitle": "ඔබට ආධාර භාර දිය හැකි මධ්‍යස්ථාන",
+        "noLocations": "මධ්‍යස්ථාන නොමැත",
+        "loading": "තොරතුරු පූරණය වෙමින් පවතී...",
         "card": {
             "address": "ලිපිනය",
-            "time": "කාලය",
+            "time": "වේලාව",
             "description": "විස්තරය",
-            "viewPhotos": "එකතු කිරීමේ ස්ථානයේ ඡායාරූප බලන්න",
+            "viewPhotos": "මධ්‍යස්ථානයේ ඡායාරූප බලන්න",
             "collectorInfo": "එකතු කරන්නාගේ තොරතුරු (ආරක්ෂිතව සම්බන්ධ වන්න)",
-            "addedOn": "ස්ථානය එකතු කළේ"
+            "addedOn": "එක් කළ දිනය"
         },
         "form": {
-            "title": "එකතු කිරීමේ ස්ථානයක් එක් කරන්න",
-            "description": "ආධාර භාර දිය හැකි එකතු කිරීමේ ස්ථානයක් පිළිබඳ විස්තර එක් කරන්න",
-            "name": "ස්ථානයේ නම",
+            "title": "එකතු කිරීමේ මධ්‍යස්ථානයක් එක් කරන්න",
+            "description": "ආධාර භාර දිය හැකි මධ්‍යස්ථානයක් පිළිබඳ විස්තර එක් කරන්න",
+            "name": "මධ්‍යස්ථානයේ නම",
             "namePlaceholder": "උදා: කොළඹ සහන මධ්‍යස්ථානය",
             "district": "දිස්ත්‍රික්කය",
             "districtPlaceholder": "තෝරන්න",
@@ -114,17 +126,143 @@
             "endDate": "අවසාන දිනය",
             "startTime": "ආරම්භක වේලාව",
             "endTime": "අවසාන වේලාව",
-            "contactSection": "සම්බන්ධතා විස්තර",
-            "contactName": "සම්බන්ධ කරගත හැකි අයගේ නම",
+            "contactSection": "සම්බන්ධතා තොරතුරු",
+            "contactName": "සම්බන්ධ විය යුතු පුද්ගලයාගේ නම",
             "contactNamePlaceholder": "නම",
             "contactPhone": "දුරකථන අංකය",
             "contactPhonePlaceholder": "07x xxxxxxx",
-            "additionalPhone": "අමතර දුරකථන (විකල්ප)",
+            "additionalPhone": "අමතර දුරකථන අංකය (විකල්ප)",
             "description": "විස්තරය",
-            "descriptionPlaceholder": "ස්ථානයේ එකතු කරන ද්‍රව්‍ය (උදා: ආහාර, ඇඳුම්, ඖෂධ)",
-            "contactImage": "සම්බන්ධ කරගත හැකි අයගේ ඡායාරූපය (අනිවාර්යයි)",
-            "contactImageNote": "මෙම ඡායාරූපය කාඩ්පතේ දර්ශනය වේ",
-            "locationImages": "එකතු කිරීමේ ස්ථානයේ ඡායාරූප (අවම 1ක් - උපරිම 5ක්)"
+            "descriptionPlaceholder": "මෙම ස්ථානයේ එකතු කරන අයිතම සඳහන් කරන්න (උදා: ආහාර, ඇඳුම්, ඖෂධ)",
+            "contactImage": "සම්බන්ධ විය යුතු පුද්ගලයාගේ ඡායාරූපය (අවශ්‍යයි)",
+            "contactImageNote": "මෙම ඡායාරූපය කාඩ්පතේ දර්ශනය වනු ඇත",
+            "locationImages": "මධ්‍යස්ථානයේ ඡායාරූප (අවම 1 - උපරිම 5)"
+        }
+    },
+    "education": {
+        "title": "අධ්‍යාපන සහාය",
+        "subtitle": "පීඩාවට පත් සිසුන් සඳහා අධ්‍යාපනික ද්‍රව්‍ය සහ සහාය ඉල්ලීම් කරන්න",
+        "addRequest": "ඉල්ලීමක් එක් කරන්න",
+        "noRequests": "අධ්‍යාපන ඉල්ලීම් නොමැත",
+        "noRequestsDesc": "පළමු අධ්‍යාපන ඉල්ලීම එක් කරන්න",
+        "addFirstRequest": "පළමු ඉල්ලීම එක් කරන්න",
+        "card": {
+            "badge": "අධ්‍යාපනය",
+            "needs": "අවශ්‍යතා"
+        },
+        "form": {
+            "title": "අධ්‍යාපන ඉල්ලීමක් එක් කරන්න",
+            "description": "සිසුන් සඳහා අධ්‍යාපනික ද්‍රව්‍ය ඉල්ලීම් කරන්න",
+            "name": "ශිෂ්‍යයාගේ/දෙමාපියන්ගේ නම",
+            "namePlaceholder": "නම",
+            "contactPerson": "සම්බන්ධ විය යුතු පුද්ගලයා",
+            "contactPersonPlaceholder": "සම්බන්ධ විය යුතු පුද්ගලයාගේ නම",
+            "phone": "දුරකථන අංකය",
+            "phonePlaceholder": "07x xxxxxxx",
+            "district": "දිස්ත්‍රික්කය",
+            "districtPlaceholder": "තෝරන්න",
+            "address": "ලිපිනය",
+            "addressPlaceholder": "සම්පූර්ණ ලිපිනය",
+            "school": "පාසල (විකල්ප)",
+            "schoolPlaceholder": "පාසලේ නම",
+            "grade": "ශ්‍රේණිය (විකල්ප)",
+            "gradePlaceholder": "උදා: 5 ශ්‍රේණිය",
+            "needs": "අවශ්‍යතා",
+            "needsPlaceholder": "උදා: පොත්, නිල ඇඳුම්, සපත්තු",
+            "additionalDetails": "අමතර විස්තර (විකල්ප)",
+            "additionalDetailsPlaceholder": "වෙනත් තොරතුරු",
+            "validation": {
+                "nameRequired": "නම අවශ්‍යයි",
+                "contactPersonRequired": "සම්බන්ධ විය යුතු පුද්ගලයා අවශ්‍යයි",
+                "phoneRequired": "දුරකථන අංකය අවශ්‍යයි",
+                "districtRequired": "දිස්ත්‍රික්කය අවශ්‍යයි",
+                "addressRequired": "ලිපිනය අවශ්‍යයි",
+                "needsRequired": "අවශ්‍යතා සඳහන් කිරීම අවශ්‍යයි"
+            }
+        }
+    },
+    "transport": {
+        "title": "ප්‍රවාහන පහසුකම්",
+        "subtitle": "සහන සේවා සඳහා ප්‍රවාහන පහසුකම් සොයා ගන්න හෝ ලබා දෙන්න",
+        "addOffer": "ප්‍රවාහන පහසුකමක් එක් කරන්න",
+        "noOffers": "ප්‍රවාහන පහසුකම් නොමැත",
+        "noOffersDesc": "පළමු ප්‍රවාහන පහසුකම එක් කරන්න",
+        "addFirstOffer": "පළමු පහසුකම එක් කරන්න",
+        "status": {
+            "available": "ලබා ගත හැක",
+            "busy": "කාර්යබහුලයි"
+        },
+        "card": {
+            "capacity": "ධාරිතාව",
+            "availability": "ලබා ගත හැකි වේලාවන්"
+        },
+        "form": {
+            "title": "ප්‍රවාහන පහසුකමක් එක් කරන්න",
+            "description": "සහන බෙදා හැරීම සඳහා ප්‍රවාහන පහසුකම් ලබා දෙන්න",
+            "name": "සම්බන්ධ විය යුතු නම",
+            "namePlaceholder": "ඔබේ නම",
+            "phone": "දුරකථන අංකය",
+            "phonePlaceholder": "07x xxxxxxx",
+            "district": "දිස්ත්‍රික්කය",
+            "districtPlaceholder": "තෝරන්න",
+            "location": "දැනට සිටින ස්ථානය",
+            "locationPlaceholder": "නගරය/ප්‍රදේශය",
+            "vehicleType": "වාහන වර්ගය",
+            "vehicleTypePlaceholder": "උදා: ලොරි, වෑන්, ත්‍රිරෝද රථ",
+            "capacity": "ධාරිතාව",
+            "capacityPlaceholder": "උදා: 1000kg හෝ පුද්ගලයින් 5",
+            "availability": "ලබා ගත හැකි වේලාවන්",
+            "availabilityPlaceholder": "උදා: පැය 24 පුරාම හෝ නිශ්චිත වේලාවන්",
+            "additionalDetails": "අමතර විස්තර (විකල්ප)",
+            "additionalDetailsPlaceholder": "වෙනත් තොරතුරු",
+            "validation": {
+                "nameRequired": "නම අවශ්‍යයි",
+                "phoneRequired": "දුරකථන අංකය අවශ්‍යයි",
+                "districtRequired": "දිස්ත්‍රික්කය අවශ්‍යයි",
+                "locationRequired": "ස්ථානය අවශ්‍යයි",
+                "vehicleTypeRequired": "වාහන වර්ගය අවශ්‍යයි",
+                "capacityRequired": "ධාරිතාව අවශ්‍යයි",
+                "availabilityRequired": "ලබා ගත හැකි වේලාවන් අවශ්‍යයි"
+            }
+        }
+    },
+    "volunteer": {
+        "title": "ස්වේච්ඡා සේවා",
+        "subtitle": "පීඩාවට පත් ප්‍රජාවන්ට උදව් කිරීමට ස්වේච්ඡා සේවකයෙකු ලෙස ලියාපදිංචි වන්න",
+        "addVolunteer": "ස්වේච්ඡා සේවකයෙකු ලෙස ලියාපදිංචි වන්න",
+        "noVolunteers": "ස්වේච්ඡා සේවකයින් නොමැත",
+        "noVolunteersDesc": "පළමු ස්වේච්ඡා සේවකයා ලෙස ලියාපදිංචි වන්න",
+        "addFirstVolunteer": "දැන් ලියාපදිංචි වන්න",
+        "status": {
+            "available": "ලබා ගත හැක",
+            "busy": "කාර්යබහුලයි"
+        },
+        "card": {
+            "skills": "හැකියාවන්",
+            "availability": "ලබා ගත හැකි වේලාවන්"
+        },
+        "form": {
+            "title": "ස්වේච්ඡා සේවක ලියාපදිංචිය",
+            "description": "සහන සේවා සඳහා උදව් කිරීමට ලියාපදිංචි වන්න",
+            "name": "නම",
+            "namePlaceholder": "ඔබේ නම",
+            "phone": "දුරකථන අංකය",
+            "phonePlaceholder": "07x xxxxxxx",
+            "district": "දිස්ත්‍රික්කය",
+            "districtPlaceholder": "තෝරන්න",
+            "skills": "හැකියාවන් / කුසලතා",
+            "skillsPlaceholder": "උදා: ප්‍රථමාධාර, ඉවුම් පිහුම්, රිය පැදවීම, ශ්‍රමය",
+            "availability": "ලබා ගත හැකි වේලාවන්",
+            "availabilityPlaceholder": "උදා: සති අන්තයේ, පූර්ණ කාලීන",
+            "additionalDetails": "අමතර විස්තර (විකල්ප)",
+            "additionalDetailsPlaceholder": "වෙනත් තොරතුරු",
+            "validation": {
+                "nameRequired": "නම අවශ්‍යයි",
+                "phoneRequired": "දුරකථන අංකය අවශ්‍යයි",
+                "districtRequired": "දිස්ත්‍රික්කය අවශ්‍යයි",
+                "skillsRequired": "හැකියාවන් සඳහන් කිරීම අවශ්‍යයි",
+                "availabilityRequired": "ලබා ගත හැකි වේලාවන් අවශ්‍යයි"
+            }
         }
     },
     "common": {
@@ -136,26 +274,28 @@
         "delete": "මකන්න",
         "save": "සුරකින්න",
         "search": "සොයන්න",
-        "filter": "පෙරහන",
+        "filter": "පෙරහන්",
         "all": "සියල්ල",
         "page": "පිටුව",
         "previous": "පෙර",
         "next": "ඊළඟ",
-        "loading": "රැඳී සිටින්න...",
+        "loading": "පූරණය වෙමින්...",
         "error": "දෝෂයක් සිදු විය",
         "success": "සාර්ථකයි",
         "close": "වසන්න",
         "select": "තෝරන්න",
         "note": "සටහන",
         "dateLocale": "si-LK",
+        "filterByDistrict": "දිස්ත්‍රික්කය අනුව පෙරහන් කරන්න",
+        "selectDistrict": "දිස්ත්‍රික්කය තෝරන්න",
         "validation": {
-            "required": "මෙම ක්ෂේත්‍රය අනිවාර්ය වේ",
-            "nameRequired": "නම ඇතුළත් කිරීම අනිවාර්යයි",
-            "phoneRequired": "දුරකථන අංකය අනිවාර්යයි",
-            "districtRequired": "දිස්ත්‍රික්කය තෝරා ගැනීම අනිවාර්යයි",
-            "addressRequired": "ලිපිනය අනිවාර්යයි",
-            "helpDescriptionRequired": "උදව් ලබා ගැනීමට, විස්තර නිවැරදිව එක් කරන්න",
-            "itemsRequired": "ද්‍රව්‍ය ඇතුළත් කිරීම අනිවාර්යයි"
+            "required": "මෙම ක්ෂේත්‍රය අවශ්‍යයි",
+            "nameRequired": "නම අවශ්‍යයි",
+            "phoneRequired": "දුරකථන අංකය අවශ්‍යයි",
+            "districtRequired": "දිස්ත්‍රික්කය අවශ්‍යයි",
+            "addressRequired": "ලිපිනය අවශ්‍යයි",
+            "helpDescriptionRequired": "උදව් ලබා ගැනීමට විස්තර නිවැරදිව ඇතුළත් කරන්න",
+            "itemsRequired": "අයිතම අවශ්‍යයි"
         }
     },
     "districts": {
@@ -182,7 +322,7 @@
         "anuradhapura": "අනුරාධපුරය",
         "polonnaruwa": "පොළොන්නරුව",
         "badulla": "බදුල්ල",
-        "monaragala": "මොණරාගල",
+        "monaragala": " මොණරාගල",
         "ratnapura": "රත්නපුර",
         "kegalle": "කෑගල්ල"
     }
